# Kuro-Soden

./: .env.example  .gitignore  Dockerfile  LEVI_PLAN.md  PLAN.md  PLAN_DOWNLOAD_UX.md  PLAN_GOJO.md  PLAN_GOJO_V2.md  PLAN_SENKU.md  PLAN_SENKU_PHASE4.md  README.md  __init__.py  add_userbot.bat  add_userbot.sh  config.yaml  conftest.py  main.py  pyproject.toml  render.yaml  requirements.txt  run.bat  run.sh
bots/: __init__.py
docs/: DEPLOYMENT.md  PROJECT_JOURNAL.md  TASKS.md
nekofetch/: __main__.py
playground/: diag_tap_response.py  probe_acutebot.py
scripts/: clear_database.py  userbot_manager.py
shared/: __init__.py  access_gate.py  admin_assignment.py  admin_profile.py  assignment_recovery.py  channel_essentials.py  command_menu.py  database_clear.py  dedup.py  distribution_cache.py  franchise_map.py  franchise_resolver.py  gojo_voice.py  handoff.py  idle_reminder.py  image_backup.py  join_gate.py  lelouch_voice.py  levi_voice.py  management_service.py  menu_router.py  models.py  owner_seed.py  pipeline_manager.py  request_gate.py  senku_publisher.py  senku_thumbnail_adapter.py  senku_voice.py  settings_content.py  settings_ui.py  timezone_ui.py  ui_helpers.py  work_service.py
tests/: __init__.py  conftest.py  helpers.py  test_access_scoping.py  test_admin_assignment.py  test_admin_profile.py  test_admin_profile_service.py  test_admin_settings.py  test_anikoto_download_flow.py  test_artwork.py  test_backup_restore.py  test_bot_content_cards.py  test_bot_handlers.py  test_broadcast_service.py  test_channel_essentials.py  test_channel_quota.py  test_database_clear.py  test_dedup.py  test_distribution_backup_restore.py  test_distribution_cache.py  test_edge_cases.py  test_franchise_map.py  test_gojo_maintenance_jobs.py  test_gojo_publish_flow.py  test_idle_reminder.py  test_image_host_order.py  test_index_backup_restore.py  test_index_bullet_and_footer.py  test_index_slot_management.py  test_integration.py  test_invite_links.py  test_kage_imports.py  test_lelouch_home_menu.py  test_lelouch_routing.py  test_levi_settings.py  test_main_channel_facts.py  test_maintenance_service.py  test_management_service.py  (+16 more)
(+162 files in other folders)
