[project]
name = "kuro-soden"
version = "0.1.0"
description = "Kuro SŇćden (ťĽíťÄĀšľĚ) ‚ÄĒ The Dark Relay. Multi-bot pipeline orchestration for NekoFetch: four anime-character bots (Lelouch, Levi, Senku, Gojo) forming an unbroken request‚Üídownload‚Üídistribute‚Üípublish chain."
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pyrofork>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
